tests/cases/traits/errors/trait-object-value-planned.ari
trait Score {
}

fn main() -> i64 {
  let value: dyn Score = 0;
  0
}
